# arduino-create-agent

./: -linux-386.REMOVED.git-id  -linux-amd64.REMOVED.git-id  -linux-arm.REMOVED.git-id  -windows-386.REMOVED.git-id  -windows-amd64.REMOVED.git-id  .drone.sec  .drone.sec.example  .drone.yml  .gitignore  .gitmodules  .licensed.yml  .project  A_WebSocket_Example.md  ArduinoCreateAgent.xml  ArduinoCreateAgent_autoupdate.xml  DISABLE_AUTOSTART.md  Goblin Giant card in clash royale  Gopkg.toml  README.md  README.md.REMOVED.git-id  Taskfile.yml  altbuild.sh  boards.go  bufferflow.go  bufferflow_default.go  bufferflow_dummypause.go  bufferflow_grbl.go  bufferflow_grbl.go.REMOVED.git-id  bufferflow_timed.go  bufferflow_timedbinary.go  bufferflow_timedraw.go  bufferflow_tinyg.go  bufferflow_tinyg.go.REMOVED.git-id  bufferflow_tinyg_old.md.REMOVED.git-id  certificates.go  commands.go  commands_v1.go  compile_webidebridge.sh  config.go  config.ini  (+62 more)
.github/: dependabot.yml  pull_request_template.md
Godeps/: Godeps.json
app/: contexts.go  controllers.go  hrefs.go  media_types.go  user_types.go
boards/: boards.go  helpers.go  platforms.go
certificates/: certificates.go  certificates.h  certificates.m  certificates_darwin.m  install_darwin.go  install_default.go  install_windows.go
config/: ArduinoCreateAgent.plist  autostart.go  config.go  config.ini  config_linux_test.go  config_test.go
connect/: connect.go  connect_test.go
design/: commands.go  connect.go  design.go  discover.go  docs.go  manage.go  pkgs.go  tools.go  upload.go
discovery/: discovery.go  network.go  (+2 more)
(+319 files in other folders)
