[tool.poetry]
name = "arduino-create-agent"
version = "0.1.0"
description = "Project used to run end-to-end test for the Arduino Create Agent"
authors = ["Umberto Baldi <u.baldi@arduino.cc>", "Maurizio Branca <m.branca@arduino.cc>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.8.0"
pytest = "^6.2.2"
requests = "^2.25.1"
invoke = "^1.5.0"
asyncio = "^3.4.3"
python-socketio = "^4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:invoke.loader" # https://github.com/pyinvoke/invoke/issues/675
]